syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "google/protobuf/empty.proto";
import "services/menus/rpc_menu.proto";
import "services/menus/menu.proto";


option go_package = "github.com/the-medo/talebound-backend/pb";

service Menus {


  rpc UpdateMenu(UpdateMenuRequest) returns (ViewMenu) {
    option (google.api.http) = {
      patch: "/menus/{menuId}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "updates menu (code or image)";
      summary: "Update Menu";
    };
  };

  rpc GetMenu(GetMenuRequest) returns (ViewMenu) {
    option (google.api.http) = {
      get: "/menus/{menuId}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "gets menu by ID";
      summary: "Get menu by ID ";
    };
  };

  rpc CreateMenuItem(CreateMenuItemRequest) returns (MenuItem) {
    option (google.api.http) = {
      post: "/menus/{menuId}/items"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "adds new menu item to the menu";
      summary: "Create menu item";
    };
  };

  rpc UpdateMenuItem(UpdateMenuItemRequest) returns (MenuItem) {
    option (google.api.http) = {
      patch: "/menus/{menuId}/items/{menuItemId}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "updates menu item";
      summary: "Update menu item";
    };
  };

  rpc UpdateMenuItemMoveGroupUp(UpdateMenuItemMoveGroupUpRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/menus/{menuId}/groups/{menuItemId}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "move menu item group up";
      summary: "Move menu item group up";
    };
  };

  rpc DeleteMenuItem(DeleteMenuItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/menus/{menuId}/items/{menuItemId}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "deletes menu item";
      summary: "Delete menu item";
    };
  };

  rpc GetMenuItems(GetMenuItemsRequest) returns (GetMenuItemsResponse) {
    option (google.api.http) = {
      get: "/menus/{menuId}/items"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "gets list of menu items";
      summary: "Get menu items";
    };
  };

  rpc CreateMenuItemPost(CreateMenuItemPostRequest) returns (MenuItemPost) {
    option (google.api.http) = {
      post: "/menus/{menuId}/items/{menuItemId}/posts"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "adds new menu item post to the menu item";
      summary: "Create menu item post";
    };
  };

  rpc UpdateMenuItemPost(UpdateMenuItemPostRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/menus/{menuId}/items/{menuItemId}/posts/{postId}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "updates menu item post";
      summary: "Update menu item post";
    };
  };

  rpc DeleteMenuItemPost(DeleteMenuItemPostRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/menus/{menuId}/items/{menuItemId}/posts/{postId}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "deletes menu item post";
      summary: "Delete menu item post";
    };
  };

  rpc GetMenuItemPosts(GetMenuItemPostsRequest) returns (GetMenuItemPostsResponse) {
    option (google.api.http) = {
      get: "/menus/{menuId}/items/{menuItemId}/posts"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "gets list of menu item posts";
      summary: "Get menu item posts";
    };
  };

  rpc GetMenuItemPostsByMenuId(GetMenuItemPostsByMenuIdRequest) returns (GetMenuItemPostsByMenuIdResponse) {
    option (google.api.http) = {
      get: "/menus/{menuId}/posts"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "gets list of menu item posts for menu";
      summary: "Get menu item posts by menu id";
    };
  };

  rpc UpdateMenuPosts(UpdateMenuPostsRequest) returns (UpdateMenuPostsResponse) {
    option (google.api.http) = {
      patch: "/menus/{menuId}/posts",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "change menu item id for multiple posts";
      summary: "Update menu posts";
    };
  };
}